test/semantic/good/jeffrey-test-scoping.mC
int main(){
   int c;
   b = 10;
   c = foo(b);}
   
int b;

int foo(int d){
return d*2;
}   
