test/semantic/bad/jeffrey-test-badarray.mC
int main(){
int c[10];
int b;
c=10;
b[10]=1;
}

